--- a/app/views/characters/index.html.erb
+++ b/app/views/characters/index.html.erb
@@ -1,14 +1,74 @@
 <p style="color: green"><%= notice %></p>
 
-<h1>Characters</h1>
+<% content_for :title, "Characters" %>
+<div class="container text-center">
 
-<div id="characters">
-  <% @characters.each do |character| %>
-    <%= render character %>
-    <p>
-      <%= link_to "Show this character", character %>
-    </p>
-  <% end %>
+  <div class="row justify-content-start">
+    <div class="col-9">
+      <h1>Characters</h1>
+
+      <table class="table table-striped table-hover">
+        <thead class="sticky-top">
+          <tr class="table-primary">
+            <th scope="col">
+              <%= sort_link(column: "id", label: "Id") %>
+              <%= sort_arrow_for("id") %>
+            </th>
+            <th scope="col">
+              <%= sort_link(column: "first_name", label: "First Name") %>
+              <%= sort_arrow_for("first_name") %>
+            </th>
+            <th scope="col">
+              <%= sort_link(column: "last_name", label: "Last Name") %>
+              <%= sort_arrow_for("last_name") %>
+            </th>
+            <th scope="col">
+              <%= sort_link(column: "gender", label: "Gender") %>
+              <%= sort_arrow_for("gender") %>
+            </th>
+            <th scope="col">
+              <%= sort_link(column: "species.species_name", label: "Species") %>
+              <%= sort_arrow_for("species.species_name") %>
+            </th>
+            <th scope="col">
+              Company-Job
+            </th>
+          </tr>
+        </thead>
+
+        <tbody class="scrollable-table">
+          <div id="characters">
+          <% @characters.each do |character| %>
+            <tr id="<%= dom_id(character) %>">
+              <th scope="row"><%= link_to "#{character.id}", edit_character_path(character) %></th>
+              <td><%= character.first_name %></td>
+              <td><%= character.last_name %></td>
+              <td><%= character.gender %></td>
+              <td><%= character.species.species_name %></td>
+              <td class="text-start">
+                <ul class="list-unstyled">
+                  <% character.person_jobs.each do |person_job| %>
+                    <li>
+                      <b><%= person_job.job.company.company_name %></b><br>
+                      &nbsp; - <%= person_job.job.role %><br>
+                      &nbsp; &nbsp;
+                      <em>
+                        (<%= person_job.start_date.strftime("%e %b '%y") %> -
+                         <%= person_job.end_date&.strftime("%e %b '%y") || 'present' %> )
+                      </em>
+                    </li>
+                  <% end %>
+                </ul>
+              </td>
+            </tr>
+          <% end %>
+          </div>
+        </tbody>
+      </table>
+    </div>
+
+    <div class="col-3">
+      <%= link_to "New", new_character_path, class: "mt-5 sticky-top btn btn-primary" %>
+    </div>
+  </div>
 </div>
-
-<%= link_to "New character", new_character_path %>
